# rust_engine_3d_demo

./: .gitmodules  Cargo.toml  LICENSE  README.md
resource/: resources.txt
resource/effects/: test2.effect
resource/scenes/: default.scene
resource/shader_caches/: blend_cube_map.comp.spirv  clear_color_ColorAttachmentCount1.frag.spirv  clear_color_ColorAttachmentCount4.frag.spirv  composite_gbuffer.frag.spirv  copy_cube_map.comp.spirv  downsampling.comp.spirv  generate_min_z.comp.spirv  render_bloom_downsampling.frag.spirv  render_bloom_highlight.frag.spirv  render_color.frag.spirv  render_copy.frag.spirv  render_debug.frag.spirv  render_final.frag.spirv  render_font_USE_DISTANCE_FIELD.frag.spirv  render_font_USE_DISTANCE_FIELD.vert.spirv  render_gaussian_blur.frag.spirv  render_motion_blur.frag.spirv  render_object_RenderMode0_RenderObjectType0.frag.spirv  render_object_RenderMode0_RenderObjectType0.vert.spirv  render_object_RenderMode0_RenderObjectType1.frag.spirv  render_object_RenderMode0_RenderObjectType1.vert.spirv  render_object_RenderMode1_RenderObjectType0.frag.spirv  render_object_RenderMode1_RenderObjectType0.vert.spirv  render_object_RenderMode1_RenderObjectType1.frag.spirv  render_object_RenderMode1_RenderObjectType1.vert.spirv  render_object_RenderMode2_RenderObjectType0.frag.spirv  render_object_RenderMode2_RenderObjectType0.vert.spirv  render_object_RenderMode2_RenderObjectType1.vert.spirv  render_object_RenderMode3_RenderObjectType0.vert.spirv  render_object_RenderMode3_RenderObjectType1.frag.spirv  render_object_RenderMode3_RenderObjectType1.vert.spirv  render_quad_RENDER_FFT_X.vert.spirv  render_ssao.frag.spirv  render_ssao_blur.frag.spirv  render_ssr.frag.spirv  render_ssr_resolve.frag.spirv  render_taa.frag.spirv  render_ui.frag.spirv  render_ui.vert.spirv
resources/: resources.txt
resources/effects/: bullet_destroy.effect  (+2 more)
src/: application_constants.rs  lib.rs  main.rs
(+216 files in other folders)
